tests/snapshots/test_runner__tests__compiler__typecheck__unreachable_case_enum_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Option<T> = Some(T) None()
let foo =
  | Some(1) => Some("hi")
  | Some(_) => Some("lol")
  | Some(_) => None() // This case is unreachable
  | None() => None()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/unreachable_case_enum_1.kk:5:5
  │
5 │   | Some(_) => None() // This case is unreachable
  │     ^^^^^^^ Unreachable case
  │
  = This case is unreachable because all possible cases are already handled by previous branches.
